# H-Mobility-Autonomous-Advanced-Course

./: .gitignore  CITATION.cff  README.md  install.sh
src/camera_perception_pkg/: package.xml  setup.cfg  setup.py
src/camera_perception_pkg/camera_perception_pkg/: debug_node.py  image_publisher_node.py  lane_info_extractor_node.py  traffic_light_detector_node.py  yolov8_node.py
src/camera_perception_pkg/camera_perception_pkg/lib/: __init__.py  camera_perception_func_lib.py
src/control/check_variable_resistor/: check_variable_resistor.ino
src/control/driving/: driving.ino  driving.ino.hex
src/control/motor_test/: motor_test.ino
src/control/ultrasonic/: ultrasonic.ino
src/data_collection/: data_collection.py
src/debug_pkg/: package.xml  setup.cfg  setup.py
src/debug_pkg/debug_pkg/: path_visualizer_node.py  yolov8_visualizer_node.py
src/decision_making_pkg/: package.xml  setup.cfg  setup.py
src/decision_making_pkg/decision_making_pkg/: motion_planner_node.py  path_planner_node.py
src/interfaces_pkg/: CMakeLists.txt  package.xml
src/interfaces_pkg/msg/: BoundingBox2D.msg  Detection.msg  DetectionArray.msg  KeyPoint2D.msg  KeyPoint2DArray.msg  KeyPoint3DArray.msg  LaneInfo.msg  Mask.msg  MotionCommand.msg  PathPlanningResult.msg  Pose2D.msg  TargetPoint.msg
src/launch_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/launch_pkg/launch/: camera_check.launch.py  debug_check.launch.py  final_check.launch.py  lidar_check.launch.py  main.launch.py
src/lidar_perception_pkg/: package.xml  setup.cfg  setup.py
src/lidar_perception_pkg/lidar_perception_pkg/: lidar_obstacle_detector_node.py  lidar_processor_node.py  (+1 more)
src/serial_communication_pkg/: package.xml  setup.cfg  setup.py
(+8 files in other folders)
