<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_perception_pkg</name>
  <version>0.0.0</version>
  <description>Camera Perception Package for "H-mobility Class 자율주행 심화과정"</description>
  <maintainer email="whaihong@g.skku.edu">Hyeong-Keun Hong</maintainer>
  <license>GPL-3</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
