<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="with23skku@g.skku.edu">jinsunlee</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>camera_perception_pkg</depend>      
  <depend>lidar_perception_pkg</depend> 
  <depend>decision_making_pkg</depend>       
  <depend>serial_communication_pkg</depend>    
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
